Mon Aug 29 13:35:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/default_client.cpp:
          Corrected argument initialisation order to silence GNU warnings

Sun Aug 28 13:36:19 2005  Arvind S. Krishna  <arvindk@dre.vanderbilt.edu>

        * tao/orbconf.h:

          Updated the TAO_NULL_LOCK_REACTOR typedef to conform to the
          following Reactor change: Fri Aug 26 18:01:31 2005  Steve Huston
          <shuston@riverace.com>. In particular, updated
          ACE_Select_Reactor_Token_T to ACE_Reactor_Token_T in the typedef
          for ACE_Select_Reactor.

Sat Aug 27 13:32:55 UTC 2005  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/driver/drv_args.cpp:
        * TAO_IDL/include/idl_global.h:
        * TAO_IDL/util/utl_global.cpp:

          Fixed the command line parsing to preserve the literal
          quotes if they are used in an include path that has a space,
          so the path is passed to the preprocessor with the literal
          quotes following '-I'. Since the string is also added to
          the IDL compiler's list of include paths this way, the
          literal quotes must also be stripped off when using the
          include path to form a full path for validation of
          included files. This fix closes [BUGID:2219]. Thanks to
          Dorian Hileaga <hdorianh@hotmail.com> for reporting the
          problem.

Sat Aug 27 11:56:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/ImplRepo_Service/Forwarder.cpp
        * orbsvcs/orbsvcs/CosEvent/CEC_ProxyPushSupplier.cpp
        * orbsvcs/orbsvcs/CosEvent/CEC_TypedEventChannel.cpp
        * orbsvcs/orbsvcs/Event/EC_Dispatching_Task.cpp
        * orbsvcs/orbsvcs/Event/EC_Kokyu_Filter_Builder.cpp
        * orbsvcs/orbsvcs/Event/EC_RTCORBA_Factory.cpp
          Fixed emulated exception errors

Sat Aug 27 10:14:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/ORB_Core.cpp:
          Added missing semi colon
